--- a/static/manifest.json
+++ b/static/manifest.json
@@ -19,5 +19,6 @@
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#000000",
-  "background_color": "#000000"
+  "background_color": "#000000",
+  "permissions":      ["geolocation"]
 }
