--- a/package.json
+++ b/package.json
@@ -1,21 +1,41 @@
 {
   "scripts": {
-    "dev": "npx snowpack dev",
+    "dev": "npx snowpack dev --secure",
     "build": "npx snowpack build"
   },
   "dependencies": {
     "dayjs": "^1.8.34",
-    "imba": "^2.0.0-alpha.94"
+    "imba": "^2.0.0-alpha.94",
+    "leaflet": "^1.7.1",
+    "mapbox-gl": "^1.12.0"
   },
   "devDependencies": {
     "imba-snowpack": "^0.0.8"
   },
   "snowpack": {
-    "mount": {"src": "/static","static": "/"},
-    "plugins": [["imba-snowpack",{"entrypoints": ["app-root"]}]],
-    "install": ["dayjs"],
+    "mount": {
+      "src": "/static",
+      "static": "/"
+    },
+    "plugins": [
+      [
+        "imba-snowpack",
+        {
+          "entrypoints": [
+            "app-root"
+          ]
+        }
+      ]
+    ],
+    "install": [
+      "dayjs",
+      "mapbox-gl"
+    ],
     "installOptions": {},
-    "devOptions": {"out": "public","open": "none"},
+    "devOptions": {
+      "out": "public",
+      "open": "none"
+    },
     "buildOptions": {}
   }
 }
