--- a/static/manifest.json
+++ b/static/manifest.json
@@ -1,6 +1,6 @@
 {
- "name": "PWA",
- "short_name": "PWA",
+ "name": "pwa",
+ "short_name": "pwa",
  "icons": [
     {
         "src": "/img/icon/android-chrome-192x192.png",
@@ -15,7 +15,7 @@
         "purpose": "maskable any"
     }
  ],
-  "start_url": "index.html",
+  "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#000000",
