--- a/static/manifest.json
+++ b/static/manifest.json
@@ -3,19 +3,19 @@
  "short_name": "pwa",
  "icons": [
     {
-        "src": "/img/icon/android-chrome-192x192.png",
+        "src": "img/icon/android-chrome-192x192.png",
         "sizes": "192x192",
         "type": "image/png",
         "purpose": "maskable any"
     },
     {
-        "src": "/img/icon/android-chrome-512x512.png",
+        "src": "img/icon/android-chrome-512x512.png",
         "sizes": "512x512",
         "type": "image/png",
         "purpose": "maskable any"
     }
  ],
-  "start_url": "/",
+  "start_url": "index.html",
   "display": "standalone",
   "orientation": "portrait",
   "theme_color": "#000000",
